--- a/datatags-app/app/views/backoffice/customizations/stylingCustomization.scala.html
+++ b/datatags-app/app/views/backoffice/customizations/stylingCustomization.scala.html
@@ -40,7 +40,7 @@
         @Messages("customization.styling.noLogo")
       </div>
       <div id="imageDiv" class="imageWell">
-        <img id="imgLogo" style="max-height: 300px; max-width:300px" src="@if(hasImage){@routes.CustomizationCtrl.getServerLogo()}" alt="">
+        <img id="imgLogo" style="max-height: 300px; max-width:300px" src="@if(hasImage){@routes.CustomizationCtrl.getServerLogo}" alt="">
       </div>
     </div>
   </div>
