--- a/datatags-app/app/views/backoffice/index.scala.html
+++ b/datatags-app/app/views/backoffice/index.scala.html
@@ -42,16 +42,16 @@
     </div>
     <div class="col-md-4">
       <h3>Common Actions</h3>
-      <a href="@routes.ModelCtrl.showModelsList()" class="btn btn-secondary btn-block">
+      <a href="@routes.ModelCtrl.showModelsList" class="btn btn-secondary btn-block">
         Manage PolicyModels
       </a>
       <a href="@routes.UsersCtrl.showEditUserPage(user.username)" class="btn btn-secondary btn-block">
         Edit Profile
       </a>
-      <a href="@routes.UsersCtrl.showNewUserPage()" class="btn btn-secondary btn-block">
+      <a href="@routes.UsersCtrl.showNewUserPage" class="btn btn-secondary btn-block">
         Add User
       </a>
-      <a href="@routes.UsersCtrl.showInviteUser()" class="btn btn-secondary btn-block">
+      <a href="@routes.UsersCtrl.showInviteUser" class="btn btn-secondary btn-block">
         Invite User
       </a>
 
