--- a/datatags-app/app/views/backoffice/modelList.scala.html
+++ b/datatags-app/app/views/backoffice/modelList.scala.html
@@ -10,7 +10,7 @@
 }
 @templates.backend("Model Editor", views.BackOfficeSection.Models, scripts ) {
   @comps.pageTitleRow("Models"){
-    <a href="@routes.ModelCtrl.showNewModelPage()" class="btn btn-large btn-secondary"><i class="fa fa-plus-circle"></i> Add</a>
+    <a href="@routes.ModelCtrl.showNewModelPage" class="btn btn-large btn-secondary"><i class="fa fa-plus-circle"></i> Add</a>
   }
   <div class="row">
     <div class="col-md-12">
