--- a/datatags-app/app/views/backoffice/users/userEditor.scala.html
+++ b/datatags-app/app/views/backoffice/users/userEditor.scala.html
@@ -147,7 +147,7 @@
 
           <div class="tab-pane mt-2 @if(!activeFirst){active}" id="changePassword">
             <div class="col mt-2">
-              <form action="@routes.UsersCtrl.doChangePassword()" method="POST">
+              <form action="@routes.UsersCtrl.doChangePassword" method="POST">
                 <div class="form-group row">
                   <label for="password1Input" class="col-sm-3 col-form-label">Previous Password</label>
                   <div class="col-sm-9">
