--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -74,7 +74,7 @@
       @session.requestedInterview match {
         case Some(reqInt) => {
           <p>@reqInt.data.returnButtonTitle</p>
-          <form action="@routes.RequestedInterviewCtrl.reportInterviewResults()" method="POST">
+          <form action="@routes.RequestedInterviewCtrl.reportInterviewResults" method="POST">
             <button class="btn btn-primary" type="submit">@reqInt.data.returnButtonText</button>
           </form>
         }
