--- a/datatags-app/app/views/templates/backend.scala.html
+++ b/datatags-app/app/views/templates/backend.scala.html
@@ -13,7 +13,7 @@
 @bsBase(title, scripts, headPart) {
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="/"><img src="@routes.CustomizationCtrl.getServerLogo()" height="30px" alt="Server Logo"> @Messages("navbar.title")</a>
+      <a class="navbar-brand" href="/"><img src="@routes.CustomizationCtrl.getServerLogo" height="30px" alt="Server Logo"> @Messages("navbar.title")</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
