--- a/datatags-app/app/views/templates/publicPages.scala.html
+++ b/datatags-app/app/views/templates/publicPages.scala.html
@@ -14,7 +14,7 @@
 
 @bsBase( pcd.serverName.map( _+"| ").getOrElse("") + title, scripts, headPart, Some(pcd)) {
 <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light-transparent">
-  <a class="navbar-brand" href="/"><img src="@routes.CustomizationCtrl.getServerLogo()" height="30px" alt="Server Logo"></a>
+  <a class="navbar-brand" href="/"><img src="@routes.CustomizationCtrl.getServerLogo" height="30px" alt="Server Logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
